--- a/Weather app/src/InfoBox.css
+++ b/Weather app/src/InfoBox.css
@@ -1,7 +1,64 @@
-.InfoBox{
-    text-align: center;
+.InfoBox {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
-.cardContainer{
-    display: flex;
-    justify-content: center;
+
+.cardContainer {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  padding: 20px;
+}
+
+.cardContainer .MuiCard-root {
+  border-radius: 15px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
+}
+
+.cardContainer .MuiCard-root:hover {
+  transform: scale(1.05);
+}
+
+.MuiCardMedia-root {
+  border-radius: 15px;
+  object-fit: cover;
+}
+
+.MuiTypography-root {
+  color: #333;
+}
+
+.MuiTypography-h5 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.MuiTypography-body2 p {
+  font-size: 14px;
+  line-height: 1.5;
+}
+
+.MuiCardContent-root {
+  padding: 15px;
+  background-color: blanchedalmond;
+  border-radius: 10px;
+}
+
+.MuiCardActions-root {
+  display: flex;
+  justify-content: center;
+}
+
+.MuiSvgIcon-root {
+  color: #ff5722;
+  margin-left: 10px;
+}
+
+@media (max-width: 768px) {
+  .cardContainer .MuiCard-root {
+    width: 90%;
+  }
 }
