--- a/Weather app/src/SearchBox.css
+++ b/Weather app/src/SearchBox.css
@@ -1,4 +1,50 @@
-.SearchBox{
+/* .SearchBox{
     text-align: center;
     margin-bottom: 25px;
+} */
+.SearchBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+  background-color: #f9f9f9;
+  padding: 15px;
+  border-radius: 10px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 300px;
+}
+
+.SearchBox .MuiTextField-root {
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.SearchBox Button {
+  background-color: #2196f3;
+  color: white;
+  width: 100%;
+  padding: 12px;
+  font-size: 16px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease;
+}
+
+.SearchBox Button:hover {
+  background-color: #1976d2;
+}
+
+.SearchBox p {
+  color: red;
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+@media (max-width: 768px) {
+  .SearchBox {
+    width: 90%;
+  }
 }
